[fix] : member Domain