@@ -1,12 +1,19 @@
 package _2._millionaire.member;
 
+import _2._millionaire.group.Groups;
+import _2._millionaire.groupmember.GroupMember;
+import _2._millionaire.groupmember.dto.SearchGroupMemberListResponse;
+import _2._millionaire.groupmember.dto.SearchGroupMemberResponse;
 import _2._millionaire.member.dto.CreateMemberRequest;
+import _2._millionaire.member.dto.CreateMemberResponse;
+import _2._millionaire.member.dto.MemberListResponse;
 import _2._millionaire.member.dto.MemberResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -14,20 +21,25 @@ import java.util.List;
 public class MemberServiceImpl implements MemberService{
     private final MemberRepository memberRepository;
 
-    void join(CreateMemberRequest createMemberRequest) {
+    public CreateMemberResponse join(CreateMemberRequest createMemberRequest) {
         Member member = new Member(createMemberRequest.getNickName(), createMemberRequest.getEmail());
         memberRepository.save(member);
+        return new CreateMemberResponse(member.getId());
     }
 
-    public List<MemberResponse> findAll() {
+    public MemberListResponse searchAllMember() {
         final List<Member> members = memberRepository.findAll();
 
-        return members.stream()
+        List<MemberResponse> memberResponses = members.stream()
                 .map(member -> MemberResponse.builder()
-                .memberName(member.getNickName())
-                .memberId(member.getId())
-                .build())
-                .toList();
+                                .memberId(member.getId())
+                                .memberName((member.getNickName()))
+                                .build())
+                .collect(Collectors.toList());
+
+        return MemberListResponse.builder()
+                .members(memberResponses)
+                .build();
     }
 
     @Transactional
